@@ -163,6 +163,26 @@ if(is_wp_error($error) && method_exists($error, 'get_error_code')) {
 
 							<?php endif; ?>
 
+							<?php do_action( 'bp_custom_profile_edit_fields_pre_visibility' ); ?>
+
+							<?php if ( bp_current_user_can( 'bp_xprofile_change_field_visibility' ) ) : ?>
+								<p class="field-visibility-settings-toggle" id="field-visibility-settings-toggle-<?php bp_the_profile_field_id() ?>">
+									<?php printf( __( 'This field can be seen by: <span class="current-visibility-level">%s</span>', 'buddypress' ), bp_get_the_profile_field_visibility_level_label() ) ?> <a href="#" class="visibility-toggle-link"><?php _ex( 'Change', 'Change profile field visibility level', 'buddypress' ); ?></a>
+								</p>
+
+								<div class="field-visibility-settings" id="field-visibility-settings-<?php bp_the_profile_field_id() ?>">
+									<fieldset>
+										<legend><?php _e( 'Who can see this field?', 'buddypress' ) ?></legend>
+										<?php bp_profile_visibility_radio_buttons() ?>
+									</fieldset>
+									<a class="field-visibility-settings-close" href="#"><?php _e( 'Close', 'buddypress' ) ?></a>
+								</div>
+							<?php else : ?>
+								<p class="field-visibility-settings-notoggle" id="field-visibility-settings-toggle-<?php bp_the_profile_field_id() ?>">
+									<?php printf( __( 'This field can be seen by: <span class="current-visibility-level">%s</span>', 'buddypress' ), bp_get_the_profile_field_visibility_level_label() ) ?>
+								</p>
+							<?php endif ?>
+
 							<?php do_action( 'bp_custom_profile_edit_fields' ) ?>
 
 							<p class="description"><?php bp_the_profile_field_description() ?></p>
